# excel_automation

./: .gitignore  README.md  app.py  main.py  pyproject.toml
planilhas_teste/: orçamento_previsto.xlsx  orçamento_realizado.xlsx
src/: comparison_logic.py  file_manager.py  interface.py  models.py
src/style/: stylesheet.py
