[tool.poetry]
name = "excel-automation"
version = "0.1.0"
description = ""
authors = ["PedroRBrito <pedrorocha1654@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
