[tool.poetry]
name = "excel-automation"
version = "0.1.0"
description = ""
authors = ["PedroRBrito <pedrorocha1654@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
